--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,14 @@ requires-python = ">=3.12"
 dependencies = [
     "humanize>=4.12.2",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+]
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "."
+]
